// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DefaultRenderer boolean 1`] = `
<div>
  true
</div>
`;

exports[`DefaultRenderer displayValue 1`] = `
<div>
  Value 1
</div>
`;

exports[`DefaultRenderer formattedValue 1`] = `
<div>
  Value 1.00
</div>
`;

exports[`DefaultRenderer list 1`] = `
<div>
  <div>
    <span>
      a
    </span>
    <span>
      , 
      b
    </span>
  </div>
</div>
`;

exports[`DefaultRenderer new line 1`] = `
<div>
  test1
test2
</div>
`;

exports[`DefaultRenderer string 1`] = `
<div>
  test string
</div>
`;

exports[`DefaultRenderer undefined 1`] = `<div />`;

exports[`DefaultRenderer url 1`] = `
<div>
  <a
    href="labkey.com"
  >
    Value 1
  </a>
</div>
`;

exports[`DefaultRenderer url, but noLink 1`] = `
<div>
  Value 1
</div>
`;

exports[`DefaultRenderer value 1`] = `
<div>
  1
</div>
`;

exports[`DefaultRenderer with style, conditional formatting enabled 1`] = `
<div>
  <span
    class="status-pill"
    style="background-color: blue;"
  >
    Value 1.00
  </span>
</div>
`;

exports[`DefaultRenderer with style, conditional formatting not enabled 1`] = `
<div>
  Value 1.00
</div>
`;
